<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView 
	        android:id="@+id/url_header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/url_header"
	        android:layout_marginBottom="5dip"
	        />
	    <TextView 
	        android:id="@+id/url_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/urltext"
	        />
	    <EditText
	        android:id="@+id/url_input_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        />    
	   <TextView 
	        android:id="@+id/proxyinfotext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/proxyinfotext"
	        android:gravity="center_horizontal"
	        android:layout_margin="5dip"
	        />
	    <TextView 
	        android:id="@+id/proxyiptext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/proxyiptext"
	        />
	    <EditText
	        android:id="@+id/ip_input_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        />   
	    <TextView 
	        android:id="@+id/proxyporttext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/proxyporttext"
	        />
	    <EditText
	        android:id="@+id/port_input_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        />
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        >
	     	<TextView 
	        	android:id="@+id/ca_installed_text"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_margin="5dip"
	        	android:layout_gravity="left"
	        	android:layout_weight="1"
	        	android:text="@string/ca_cert_installed"
	        	/>
	     	<TextView 
	        	android:id="@+id/ca_error_text"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@android:color/holo_red_light"
	        	android:layout_margin="5dip"
	        	android:layout_gravity="right"
	        	android:gravity="right"
	        	android:layout_weight="1"
	        	android:text="@string/cert_no"
	        	/>
	    	</LinearLayout>
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        >
	     	<TextView 
	        	android:id="@+id/site_installed_text"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_margin="5dip"
	        	android:layout_gravity="left"
	        	android:layout_weight="1"
	        	android:text="@string/site_cert_installed"
	        	/>
	     	<TextView 
	        	android:id="@+id/site_error_text"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@android:color/holo_red_light"
	        	android:layout_margin="5dip"
	        	android:layout_gravity="right"
	        	android:gravity="right"
	        	android:layout_weight="1"
	        	android:text="@string/cert_no"
	        	/>
	    	</LinearLayout>
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        >
	     	<TextView 
	        	android:id="@+id/full_installed_text"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_margin="5dip"
	        	android:layout_gravity="left"
	        	android:layout_weight="1"
	        	android:text="@string/full_cert_installed"
	        	/>
	     	<TextView 
	        	android:id="@+id/full_error_text"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@android:color/holo_red_light"
	        	android:layout_margin="5dip"
	        	android:layout_gravity="right"
	        	android:gravity="right"
	        	android:layout_weight="1"
	        	android:text="@string/cert_no"
	        	/>
	    	</LinearLayout>
	    	
	    
	    <Button 
	        android:id="@+id/test_cert_chain_button"
	        android:layout_width="200dip"
	        android:layout_height="45dip"
	        android:gravity="center_horizontal"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/test_cert_chain"
	        />
	    <Button 
	        android:id="@+id/install_ca_button"
	        android:layout_width="200dip"
	        android:maxLines="1"
	        android:layout_height="45dip"
	        android:gravity="center_horizontal"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/install_ca_cert"
	        />
	    <Button 
	        android:id="@+id/install_site_cert_button"
	        android:maxLines="1"
	        android:layout_width="200dip"
	        android:layout_height="45dip"
	        android:gravity="center_horizontal"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/install_site_cert"
	        />
	</LinearLayout>
</ScrollView>